@@ -43,6 +43,7 @@ Cobbler CHANGELOG
 - (BUGF) fix for MSIE rendering in web app
 - (BUGF) stop yumdownloader including system yum repos
 - (DOCS) update webui project page link
+- (BUGF) remove caching logic from remote.py
 
 - Tue Mar 3 2009 - 1.4.3
 - (BUGF) fix OMAPI support's (note: deprecated) usage of subprocess
